--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p><big><b>Автор Lis</b></big></p>
 <img src="iglLGDnuRb0MDECoyB9gWcSLpbK9VyS4tR66H7LpB-sf1cM-GaxZ7MJHGCMYnyMFkuQ-VX3popIUUkWRtvCACiJ8.jpg" width=700 height=500>
 
-<img src="vA8vk59nh9ridstjEqt8eViFx88jxhCOvau-ca-yk65WRlKBa1xRoPgU7tUjZSGJfpCqDDiGpxbcBW3ykQMHvry2.jpg" width=400 высота=500>
-background-изображение: url(/storage/emulated/0/рабочий сайт/img/2615400.jpg );
+<ИМГ СРЦ="vA8vk59nh9ridstjEqt8eViFx88jxhCOvau-ca-yk65WRlKBa1xRoPgU7tUjZSGJfpCqDDiGpxbcBW3ykQMHvry2.jpg" ширина=400 height=400>
+     предыстория-изображение: url(/2615400.jpg);
   
   
