--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <img src="iglLGDnuRb0MDECoyB9gWcSLpbK9VyS4tR66H7LpB-sf1cM-GaxZ7MJHGCMYnyMFkuQ-VX3popIUUkWRtvCACiJ8.jpg" width=700 height=500>
 
 <img src="vA8vk59nh9ridstjEqt8eViFx88jxhCOvau-ca-yk65WRlKBa1xRoPgU7tUjZSGJfpCqDDiGpxbcBW3ykQMHvry2.jpg" width=400 height=400>
-background-image: url(2615400.jpg);
   
-  
+ <body style="background-image: url(2615400.jpg)">
+
+ </body>
