--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 <marquee scrolldelay=2 scrollamount=1 truspeed>ТОП ОСОБНЯКИ</marquee>
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
-<img src="iglLGDnuRb0MDECoyB9gWcSLpbK9VyS4tR66H7LpB-sf1cM-GaxZ7MJHGCMYnyMFkuQ-VX3popIUUkWRtvCACiJ8.jpg" width=700 height=500>
 
-<img src="vA8vk59nh9ridstjEqt8eViFx88jxhCOvau-ca-yk65WRlKBa1xRoPgU7tUjZSGJfpCqDDiGpxbcBW3ykQMHvry2.jpg" width=400 height=400>
-  
- <body style="background-image: url(2615400.jpg)">
+<body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed">
 
- </body>
+</body>
