--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@
 <body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed">
 
 </body>
+<body background-size: 100%>
