--- a/index.html
+++ b/index.html
@@ -9,7 +9,5 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
-<body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed">
-
+<body background: url(2615400.jpg) no-repeat; background-size: cover>
 </body>
- <body background: url(2615400.jpg) no-repeat; background-size: 100%>
