--- a/index.html
+++ b/index.html
@@ -9,5 +9,4 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
-<body background: url(2615400.jpg) no-repeat; background-size: cover>
-</body>
+<body background="2615400.jpg"  align="center" width="250" height="150">
