--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
-<body background="2615400.jpg"  align="center" width="250" height="150">
+<body background="2615400.jpg"  align="center" width="100%" height="100%">
