--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
-<body background="2615400.jpg"  align="center" width="100%" height="100%">
+<body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed; min-height:100vh;">
+
+</body>
