--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
-<body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed; min-height:100vh;">
+<body class="bg-image1">
 
-</body>
+body <
+
+    background-position: center center;
+
+    background-repeat: no-repeat;
+
+    background-attachment: fixed;
+
+    -webkit-background-size: cover;
+
+    -moz-background-size: cover;
+
+    -o-background-size: cover;
+
+    background-size: cover;
+
+    margin: 0;
+
+    padding: 0;
+
+    height: 100%;
+
+    min-height: 100%;
+
+>
+
+.bg-image1 < 
+
+        background-image: url(2615400.jpg); 
+>
