--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
-<body class="bg-image1">
+<body class="2615400.jpg">
 
 body <
 
