--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
 <title>LifeAfter</title>
 </head>
@@ -9,35 +9,6 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
-<body class="2615400.jpg">
-
-body <
-
-    background-position: center center;
-
-    background-repeat: no-repeat;
-
-    background-attachment: fixed;
-
-    -webkit-background-size: cover;
-
-    -moz-background-size: cover;
-
-    -o-background-size: cover;
-
-    background-size: cover;
-
-    margin: 0;
-
-    padding: 0;
-
-    height: 100%;
-
-    min-height: 100%;
-
->
-
-.bg-image1 < 
-
-        background-image: url(2615400.jpg); 
->
+    <body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed">
+body<min-height:100vh;>
+</body>
