--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <p><big><b>Автор Lis</b></big></p>
 
     <body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed">
-body<min-height:100vh;>
+<min-height:100vh;>
 </body>
