--- a/index.html
+++ b/index.html
@@ -12,3 +12,14 @@
     <body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed">
 <min-height:100vh;>
 </body>
+        
+  <meta charset="utf-8">
+  <style>
+   body {
+    background: url(2615400.jpg) no-repeat;
+    -moz-background-size: 100%;
+    -webkit-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+   }
+  </style>
