--- a/index.html
+++ b/index.html
@@ -9,17 +9,36 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
-    <body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed">
-<min-height:100vh;>
-</body>
-        
+    <html>
+
+ <head>
+
   <meta charset="utf-8">
+
+  <title>Растягиваемый фон</title>
+
   <style>
+
    body {
-    background: url(2615400.jpg) no-repeat;
-    -moz-background-size: 100%;
-    -webkit-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
+
+    background: url(images/sun2.png) no-repeat;
+
+    -moz-background-size: 100%; /* Firefox 3.6+ */
+
+    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+
+    -o-background-size: 100%; /* Opera 9.6+ */
+
+    background-size: 100%; /* Современные браузеры */
+
    }
+
   </style>
+
+ </head>
+
+ <body>
+
+ </body>
+
+</html>
