--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
    body {
 
-    background: url(images/sun2.png) no-repeat;
+    background: url(2615400.jpg) no-repeat;
 
     -moz-background-size: 100%; /* Firefox 3.6+ */
 
