--- a/index.html
+++ b/index.html
@@ -9,36 +9,17 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
-    <html>
 
- <head>
+html {
 
-  <meta charset="utf-8">
+       background: url(2615400.jpg) no-repeat center center fixed;
 
-  <title>Растягиваемый фон</title>
+       -webkit-background-size: cover;
 
-  <style>
+       -moz-background-size: cover;
 
-   body {
+       -o-background-size: cover;
 
-    background: url(2615400.jpg) no-repeat;
+       background-size: cover;
 
-    -moz-background-size: 100%; /* Firefox 3.6+ */
-
-    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
-
-    -o-background-size: 100%; /* Opera 9.6+ */
-
-    background-size: 100%; /* Современные браузеры */
-
-   }
-
-  </style>
-
- </head>
-
- <body>
-
- </body>
-
-</html>
+}
