--- a/index.html
+++ b/index.html
@@ -10,16 +10,24 @@
 <p><big><b>Автор Lis</b></big></p>
 
 
-html {
 
-       background: url(2615400.jpg) no-repeat center center fixed;
-
-       -webkit-background-size: cover;
-
-       -moz-background-size: cover;
-
-       -o-background-size: cover;
-
-       background-size: cover;
-
+div id="bg">
+        <img src="2615400.jpg" alt="">
+</div>
+#bg {
+position:fixed;
+top:-50%;
+left:-50%;
+width:200%;
+height:200%;
+}
+#bg img {
+position:absolute;
+top:0;
+left:0;
+right:0;
+bottom:0;
+margin:auto;
+min-width:50%;
+min-height:50%;
 }
