--- a/index.html
+++ b/index.html
@@ -9,25 +9,44 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
+<div class="background">
 
+  <img src="2615400.jpg">
 
-div id="bg">
-        <img src="2615400.jpg" alt="">
 </div>
-#bg {
-position:fixed;
-top:-50%;
-left:-50%;
-width:200%;
-height:200%;
+
+Copy
+
+div.background {
+
+  position: fixed;
+
+  top: -50%;
+
+  left: -50%;
+
+  width: 200%;
+
+  height: 200%;
+
 }
-#bg img {
-position:absolute;
-top:0;
-left:0;
-right:0;
-bottom:0;
-margin:auto;
-min-width:50%;
-min-height:50%;
+
+img {
+
+  position: absolute;
+
+  top: 0;
+
+  left: 0;
+
+  right: 0;
+
+  bottom: 0;
+
+  margin: auto;
+
+  min-width: 50%;
+
+  min-height: 50%;
+
 }
