--- a/index.html
+++ b/index.html
@@ -9,44 +9,30 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
-<div class="background">
 
-  <img src="2615400.jpg">
+background-attachment
+   body <
 
-</div>
+    background-image: url(2615400.jpg);
 
-Copy
+    background-attachment: fixed, scroll;    
 
-div.background {
+    background-repeat: repeat-y, repeat-y;
 
-  position: fixed;
+    background-position: left, right;    
 
-  top: -50%;
+   >
 
-  left: -50%;
+div <
 
-  width: 200%;
+    width: 500px; 
 
-  height: 200%;
+    height: 1500px;
 
-}
+    background: white;
 
-img {
+    margin-left: 600px;
 
-  position: absolute;
+    border: solid 1px blue; 
 
-  top: 0;
-
-  left: 0;
-
-  right: 0;
-
-  bottom: 0;
-
-  margin: auto;
-
-  min-width: 50%;
-
-  min-height: 50%;
-
-}
+>
