--- a/index.html
+++ b/index.html
@@ -9,30 +9,6 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
+ <body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed">
 
-background-attachment
-   body <
-
-    background-image: url(2615400.jpg);
-
-    background-attachment: fixed, scroll;    
-
-    background-repeat: repeat-y, repeat-y;
-
-    background-position: left, right;    
-
-   >
-
-div <
-
-    width: 500px; 
-
-    height: 1500px;
-
-    background: white;
-
-    margin-left: 600px;
-
-    border: solid 1px blue; 
-
->
+</body>
