--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
- <body style="background-image: url(2615400.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed">
+ <body style="background-image: url(qiang-zhou-2); background-repeat: no-repeat; background-position: top center; background-attachment: fixed">
 
 </body>
