--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <p><big><b>Автор Lis</b></big></p>
 
  <body style="background-image: url(unbroken-cover.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed; background-size: cover">
-
+<ul id="navbar">
+<li><a href="#">Главная</a></li>
+<li><a href="#">Новости</a></li>
+<li><a href="#">Контакты</a></li>
+<li><a href="#">О нас</a></li>
+</ul>
+  
+  
 </body>
-<ahref href="#" class="arrow-container">
-  <div class="arrow"></div>
-  <div class="arrow"></div>
-  <div class="arrow"></div>  
-</ahref>
