--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 </head>
 </html
 <body bgcolor=red text=black>
-<h1 align center>Добро пожаловать на сайт</h1>
+<h1 align=center>Добро пожаловать на сайт</h1>
 <marquee scrolldelay=2 scrollamount=1 truspeed>ТОП ОСОБНЯКИ</marquee>
 <p><b><font size=6>начнем<font size=6></b></p>
 <p><big><b>Автор Lis</b></big></p>
 
  <body style="background-image: url(unbroken-cover.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed; background-size: cover">
 <ul id="navbar">
-<li><a href="#">Главная</a></li>
-<li><a href="#">Новости</a></li>
-<li><a href="#">Контакты</a></li>
-<li><a href="#">О нас</a></li>
+<li><a href="#" font color=white>Главная</a></li>
+<li><a href="#" font color=white>Новости</a></li>
+<li><a href="#" font color=white>Контакты</a></li>
+<li><a href="#" font color=white>О нас</a></li>
 </ul>
   
   
