--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
  <body style="background-image: url(unbroken-cover.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed; background-size: cover">
 <ul id="navbar">
-<li><a href="#" font color=white>Главная</a></li>
-<li><a href="#" font color=white>Новости</a></li>
-<li><a href="#" font color=white>Контакты</a></li>
-<li><a href="#" font color=white>О нас</a></li>
+<li><a href="#"><font color=white>Главная</a></li>
+<li><a href="#"><font color=white>Новости</a></li>
+<li><a href="#"><font color=white>Контакты</a></li>
+<li><a href="#"><font color=white>О нас</a></li>
 </ul>
   
   
