--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 <li><a href="#"><font color=white>Контакты</a></li>
 <li><a href="#"><font color=white>О нас</a></li>
 </ul>
-  
+<div>
+<div>
+<a href="ссылка_на_главную">
+<img src="images/logo1.jpg" />
+</a>
+</div>
+</div>
   
 </body>
