--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <a href="ссылка_на_главную">
 <img src="images/logo1.jpg" />
 </a>
+<a href="//www.lifeafterфан.game/index.html" title="логотип" class="logo" target="_blank"></a>
 </div>
 </div>
-  
+
 </body>
