--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 <div>
 <div>
 <a href="ссылка_на_главную">
-<img src="images/logo1.jpg" />
+<img src="" />
 </a>
-<a href="//www.lifeafterфан.game/index.html" title="логотип" class="logo" target="_blank"></a>
 </div>
 </div>
 
