--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 <li><a href="#"><font color=white>Контакты</a></li>
 <li><a href="#"><font color=white>О нас</a></li>
 </ul>
-<div>
-<div>
-<a href="ссылка_на_главную">
-<img src="logo.png"/>
+<nolayer>
+<div id="on_year1" style="position: fixed; top:0; left:0;">
+</nolayer>
+<a href="https://lagten.github.io/Gods-eye/#"><img src="logo.png" border="0" align="left"></a>
+<nolayer>
 </div>
-</div>
+</nolayer>
 
 </body>
