--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <nolayer>
 <div id="on_year1" style="position: fixed; top:0; left:0;">
 </nolayer>
-<a href="https://lagten.github.io/Gods-eye/#"><img src="logo.png" border="0" align="left"></a>
+<a href="http://Lagten.github.io/Gods-eye"><img src="logo.png" border="0" align="left"></a>
 <nolayer>
 </div>
 </nolayer>
