--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
 </head>
 </html
 <body bgcolor=red text=black>
-<h1 align=center>Добро пожаловать на сайт</h1>
-<marquee scrolldelay=2 scrollamount=1 truspeed>ТОП ОСОБНЯКИ</marquee>
-<p><b><font size=6>начнем<font size=6></b></p>
-<p><big><b>Автор Lis</b></big></p>
+<h1 align=center>1</h1>
+<marquee scrolldelay=2 scrollamount=1 truspeed>1</marquee>
+<p><b><font size=6>1<font size=6></b></p>
+<p><big><b>1</b></big></p>
 
  <body style="background-image: url(unbroken-cover.jpg); background-repeat: no-repeat; background-position: top center; background-attachment: fixed; background-size: cover">
-<ul id="navbar">
-<li><a href="#"><font color=white>Главная</a></li>
-<li><a href="#"><font color=white>Новости</a></li>
-<li><a href="#"><font color=white>Контакты</a></li>
-<li><a href="#"><font color=white>О нас</a></li>
-</ul>
+
 <nolayer>
 <div id="on_year1" style="position: fixed; top:0; left:0;">
 </nolayer>
 <a href="http://Lagten.github.io/Gods-eye"><img src="logo.png" border="0" align="left"></a>
 <nolayer>
 </div>
+ 
+ <div id="on_year1" style="position: fixed; top:0; right:0;">
+</nolayer>
+<a href=" ВАША ССЫЛКА "><img src="https://cdn-icons.flaticon.com/png/512/3887/premium/3887359.png?token=exp=1655753714~hmac=035d9e3c5d2f2455f5cdbc9bd114f9cd" border="0" align="right"></a>
+ <nolayer>
+</div>
+ 
+ 
 </nolayer>
 
 </body>
