--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
  <div id="on_year1" style="position: fixed; top:0; right:0;">
 </nolayer>
-<a href=" ВАША ССЫЛКА "><img src="https://cdn-icons.flaticon.com/png/512/3887/premium/3887359.png?token=exp=1655753714~hmac=035d9e3c5d2f2455f5cdbc9bd114f9cd" border="0" align="right"></a>
+<a href=" ВАША ССЫЛКА "><img src="https://img.icons8.com/metro/2x/chat.png" border="0" align="right"></a>
  <nolayer>
 </div>
  
